some enhancements before 2.1.0